# phantom

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/phantom-analysis/: Cargo.toml
crates/phantom-analysis/src/: cli.rs  diff.rs  lib.rs  parser.rs  runner.rs
crates/phantom-app/: Cargo.toml  tauri.conf.json
crates/phantom-app/capabilities/: default.json
crates/phantom-app/icons/: icon.icns
crates/phantom-app/src/: io_thread.rs  ipc.rs  main.rs  render_pump.rs  sandbox.rs  scheduler.rs  state.rs
crates/phantom-app/src/commands/: analysis.rs  git.rs  menu.rs  mod.rs  presets.rs  projects.rs  repos.rs  terminal.rs
crates/phantom-db/: Cargo.toml
crates/phantom-db/src/: analyses.rs  lib.rs  presets.rs  projects.rs  repositories.rs  schema.rs  settings.rs
crates/phantom-git/: Cargo.toml
crates/phantom-git/src/: branches.rs  lib.rs  watcher.rs  worktrees.rs
crates/phantom-pty/: Cargo.toml
crates/phantom-pty/src/: lib.rs  pty.rs  (+2 more)
crates/phantom-vt/: Cargo.toml
docs/plans/: 2026-02-21-analysis-system-design.md  2026-02-21-cli-integration-specs.md  2026-02-21-component-specs.md  2026-02-21-phantom-workspace-design.md  2026-02-21-phantom-workspace-impl.md  2026-02-21-prompt-templates-final.md  2026-02-21-ux-quality-standards.md
docs/prompts/: app-icon.md  repo-banner.md
src/: App.tsx  index.html
src/components/: AnalysisCard.tsx  Breadcrumb.tsx  CustomAnalysisEditor.tsx  DiagramCanvas.tsx  DiagramNode.tsx  Layout.tsx  PresetCard.tsx  PresetEditor.tsx  Sidebar.tsx  SplitContainer.tsx  StatusBar.tsx  StatusBarReact.tsx  Terminal.tsx  TerminalCanvas.tsx  TerminalIsland.tsx
src/lib/: analysis-schemas.ts  api.ts  graph-to-reactflow.ts  graph-types.ts  mermaid-parser.ts  mermaid-to-reactflow.ts
src/renderer/: canvas-renderer.ts
src/stores/: sessions.ts  terminal-layout.ts  workspace.ts
src/styles/: global.css
src/views/: DashboardView.tsx  DiagramView.tsx  LauncherView.tsx  ProjectView.tsx  ProjectsView.tsx  ReposView.tsx  TerminalView.tsx
(+8 files in other folders)
