[package]
name = "phantom-analysis"
version.workspace = true
edition.workspace = true

[dependencies]
phantom-db = { path = "../phantom-db" }
rusqlite = { version = "0.31", features = ["bundled"] }
phantom-git = { path = "../phantom-git" }
tokio = { version = "1", features = ["process", "sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
