[package]
name = "phantom-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
