[package]
name = "phantom-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
phantom-vt = { path = "../phantom-vt" }
phantom-pty = { path = "../phantom-pty" }
phantom-db = { path = "../phantom-db" }
phantom-git = { path = "../phantom-git" }
phantom-analysis = { path = "../phantom-analysis" }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri = { version = "2", features = ["wry"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
